--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CYvxCciD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CvgTQEnq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DpcJphMk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C4CmOMWR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C4hhuYyg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D6qWGwRs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
@@ -22,15 +22,16 @@
 			
 			<script>
 				{
-					__sveltekit_usbecd = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_1rvcm6x = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/contact-me"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CYvxCciD.js"),
-						import("./_app/immutable/entry/app.C4hhuYyg.js")
+						import("./_app/immutable/entry/start.DpcJphMk.js"),
+						import("./_app/immutable/entry/app.D6qWGwRs.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
