--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cud6QZt_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DHZ8Cm0Z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.YJ7t5suB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.LO5r1h3R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CsnvcYZK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BS_jgNg0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
@@ -22,7 +22,7 @@
 			
 			<script>
 				{
-					__sveltekit_36p854 = {
+					__sveltekit_184rqgo = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/contact-me"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cud6QZt_.js"),
-						import("./_app/immutable/entry/app.CsnvcYZK.js")
+						import("./_app/immutable/entry/start.YJ7t5suB.js"),
+						import("./_app/immutable/entry/app.BS_jgNg0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
