--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EaHJ77U7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BqW-bV9n.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BPGMSZz0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BltAnhsP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BHB9WAZs.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CVVI_nch.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
@@ -22,15 +22,16 @@
 			
 			<script>
 				{
-					__sveltekit_4655tk = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_1r7r7w9 = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/contact-me"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EaHJ77U7.js"),
-						import("./_app/immutable/entry/app.BHB9WAZs.js")
+						import("./_app/immutable/entry/start.BPGMSZz0.js"),
+						import("./_app/immutable/entry/app.CVVI_nch.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
