--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D9ZWx4HW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BGu55Uip.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOzais7q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.MlOgc6jw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CJvgOHHK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BPTVrBKY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
@@ -22,15 +22,15 @@
 			
 			<script>
 				{
-					__sveltekit_1weve59 = {
+					__sveltekit_170p9gy = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D9ZWx4HW.js"),
-						import("./_app/immutable/entry/app.CJvgOHHK.js")
+						import("./_app/immutable/entry/start.DOzais7q.js"),
+						import("./_app/immutable/entry/app.BPTVrBKY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
