--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D733s36G.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.uDyyHiQR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C4KthR-s.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C_WZyHGG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.ukGXcWgA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DmzqMbWF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DE9GBIEp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DgIzEGzw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.D8k7sYuA.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DuwGlcV3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.DVTC40OM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,15 +23,16 @@
 			
 			<script>
 				{
-					__sveltekit_1v65jht = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_hieunk = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/contact-me"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D733s36G.js"),
-						import("./_app/immutable/entry/app.DE9GBIEp.js")
+						import("./_app/immutable/entry/start.C4KthR-s.js"),
+						import("./_app/immutable/entry/app.DgIzEGzw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
