--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BSHNIapF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BjoYhcGN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CaHO6d8z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C8BZ6--o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.HG_O5CTS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DlIa3xrJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D2EhwxuS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ChveuUZu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DZop68hG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.SaBe9KaC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.DVTC40OM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_kspusc = {
+					__sveltekit_18hied9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/contact-me"
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BSHNIapF.js"),
-						import("./_app/immutable/entry/app.D2EhwxuS.js")
+						import("./_app/immutable/entry/start.CaHO6d8z.js"),
+						import("./_app/immutable/entry/app.ChveuUZu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
