--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<script>
 				{
 					__sveltekit_18hied9 = {
-						base: new URL(".", location).pathname.slice(0, -1),
+						base: "/contact-me",
 						assets: "/contact-me"
 					};
 
