--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CaHO6d8z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C8BZ6--o.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DlIa3xrJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ChveuUZu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.SaBe9KaC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.DVTC40OM.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/entry/start.CaHO6d8z.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/entry.C8BZ6--o.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/runtime.BPGcid8v.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/paths.DlIa3xrJ.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/index-client.D13uCqzX.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/entry/app.ChveuUZu.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/render.DJvhbGvv.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/disclose-version.CyViCCab.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/nodes/0.DEwhEDGE.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/nodes/2.SaBe9KaC.js">
+		<link rel="modulepreload" href="./contact-me/_app/immutable/chunks/legacy.DVTC40OM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="min-h-screen bg-gray-100 flex flex-col items-center justify-center"><header class="text-center py-8"><h1 class="text-4xl font-bold text-gray-800">Welcome to My Landing Page</h1> <p class="text-lg text-gray-600 mt-4">Contact us for more information</p></header> <section class="bg-white shadow-md rounded-lg p-6 w-11/12 sm:w-3/4 md:w-1/2 lg:w-1/3"><h2 class="text-2xl font-bold text-gray-800 text-center mb-4">Contact Us</h2> <form class="space-y-4"><div><label for="name" class="block text-gray-700">Name:</label> <input type="text" id="name" value="" class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Your Name" required></div> <div><label for="email" class="block text-gray-700">Email:</label> <input type="email" id="email" value="" class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Your Email" required></div> <div><label for="message" class="block text-gray-700">Message:</label> <textarea id="message" class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Your Message" required></textarea></div> <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition">Send</button></form> <p class="mt-4 text-center text-gray-600"></p></section></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
