--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/contact-me/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/contact-me/_app/immutable/entry/start.BTzw4uN_.js">
-		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/entry.BIo006LG.js">
+		<link rel="modulepreload" href="/contact-me/_app/immutable/entry/start.CuZ2y2qb.js">
+		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/entry.B9eWd0MX.js">
 		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/runtime.BPGcid8v.js">
-		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/paths.CT2WNloe.js">
+		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/paths.CnkYj1sb.js">
 		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="/contact-me/_app/immutable/entry/app.CjlhIoWL.js">
+		<link rel="modulepreload" href="/contact-me/_app/immutable/entry/app.BQ44cEeU.js">
 		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="/contact-me/_app/immutable/chunks/disclose-version.CyViCCab.js">
 	</head>
@@ -18,7 +18,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_spy7mk = {
+					__sveltekit_181xt0w = {
 						base: "/contact-me",
 						assets: "/contact-me"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/contact-me/_app/immutable/entry/start.BTzw4uN_.js"),
-						import("/contact-me/_app/immutable/entry/app.CjlhIoWL.js")
+						import("/contact-me/_app/immutable/entry/start.CuZ2y2qb.js"),
+						import("/contact-me/_app/immutable/entry/app.BQ44cEeU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
