--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CyS6oWNO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BTzw4uN_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BIo006LG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CuZ2y2qb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B9eWd0MX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BPGcid8v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CT2WNloe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CnkYj1sb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D13uCqzX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CjlhIoWL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BQ44cEeU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DJvhbGvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CyViCCab.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DEwhEDGE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BXkGgIvo.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cy4taXQi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.DVTC40OM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_spy7mk = {
+					__sveltekit_181xt0w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/contact-me"
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BTzw4uN_.js"),
-						import("./_app/immutable/entry/app.CjlhIoWL.js")
+						import("./_app/immutable/entry/start.CuZ2y2qb.js"),
+						import("./_app/immutable/entry/app.BQ44cEeU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
